<resources>
    <string name="app_name">عرفني</string>
    <string name="choose_region">choose region</string>
    <string name="start">Next</string>
    <string name="open_internet_connection">please open your internet connection</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="should_select_region">please select region</string>
    <string name="fail_to_get_spinner_data">fail to get spinner data, please check your internet connection</string>
    <string name="fail_to_get_spinner_data_types">fail to get types, please check your internet connection</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="description">description</string>
    <string name="type">type</string>
    <string name="send">Send</string>
    <string name="select_image">pick/choose photo</string>
    <string name="empty_fields"> empty fields</string>
    <string name="invalid_email">invalid email</string>
    <string name="only_four_image_allowed">only four image allowed</string>
</resources>
